--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 return this._div;
             };
             title.update = function () {
-                this._div.innerHTML = '<h2>Dotation Gloable de Fonctionnement en 2021</h2>';
+                this._div.innerHTML = '<h1>Dotation Globale de Fonctionnement en 2021</h1>';
             };
             title.addTo(map);
         var baseMaps = {};
