--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin: 0;
         }
         </style>
-        <title>Dotation Gloable de Fonctionnement en 2021</title>
+        <title>Dotation Globale de Fonctionnement en 2021</title>
     </head>
     <body>
         <div id="map">
